# hs-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
controllers/: auth.py  crisis.py  inventory.py  operations.py  organization.py  registration_request.py  resource_category.py  shelter.py  shelter_spreadsheet.py  shelter_stay.py  user.py
dependencies/: auth.py  session.py
docs/: inventory-endpoints.md
repositories/: __init__.py  base.py  crisis.py  inventory_item.py  inventory_movement.py  resource_category.py  shelter.py
schemas/: __init__.py  pagination.py
scripts/: create_master.py  seed.py
services/: __init__.py  audit_service.py  auth_service.py  base.py  crisis.py  email_service.py  inventory_service.py  operations.py  resource_category_service.py  shelter.py  shelter_spreadsheet_service.py  shelter_stay_service.py
tests/: conftest.py  test_auth.py  test_auth_login.py  test_base_repository.py  test_base_service.py  test_crisis_crud.py  test_crisis_repository.py  test_crisis_schemas.py  test_crisis_service.py  test_email_service.py  test_initial_stock.py  test_inventory_controllers.py  test_inventory_movement_repository.py  test_inventory_service.py  test_operations_endpoint.py  test_operations_service.py  test_organizations.py  test_pagination.py  test_rbac.py  test_registration_requests.py  test_resource_category_filter.py  test_resource_category_repository.py  test_shelter_crud.py  test_shelter_models.py  test_shelter_repository.py  test_shelter_schemas.py  (+6 more)
(+63 files in other folders)
