[project]
name = "hs-backend"
version = "0.1.0"
description = "Projeto para a disciplina PROJETO E DESENVOLVIMENTO DE SISTEMAS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.135.3",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.9",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
