[project]
name = "hs-backend"
version = "0.1.0"
description = "Projeto para a disciplina PROJETO E DESENVOLVIMENTO DE SISTEMAS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0,<2.0.0",
    "bcrypt>=4.0,<5.0",
    "fastapi[standard]==0.135.3",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3,<4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0,<4",
    "resend>=2.30.1",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pre-commit>=4.6.0",
    "pytest==9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff==0.15.9",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
